--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       </section>
 
       <!-- RIGHT -->
-      <section class="panel" aria-label="어필 문구 및 신뢰 포인트">
+      <section class="panel panel-highlight" aria-label="어필 문구 및 신뢰 포인트">
         <div class="panelHeader">
           <h2>
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
