--- a/index.html
+++ b/index.html
@@ -108,12 +108,7 @@
                     </div>
                   </div>
 
-                  <div class="arrow" aria-hidden="true">
-                    <svg viewBox="0 0 60 24" fill="none">
-                      <path d="M2 12h46" stroke="rgba(255,139,77,.4)" stroke-width="2.2" stroke-linecap="round"/>
-                      <path d="M42 5l8 7-8 7" stroke="rgba(255,139,77,.4)" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-                  </div>
+                  <div class="arrow" aria-hidden="true"></div>
 
                   <div class="mergeNode" tabindex="0" data-id="image_pool">
                     <div class="top">
