--- a/index.html
+++ b/index.html
@@ -44,14 +44,13 @@
             </svg>
             Pipeline Map
           </h2>
-          <small>모델을 만들고 → 대량으로 적용</small>
+          <small><span class="kbd">←/→</span> 이동 · <span class="kbd">Space</span> 자동 토글</small>
         </div>
 
         <div class="panelBody">
           <div class="legendRow">
             <div></div>
             <div class="hint">
-              <span class="kbd">←/→</span> 이동 · <span class="kbd">Space</span> 자동 토글
             </div>
           </div>
 
