파이프라인 12 구분

--- a/index.html
+++ b/index.html
@@ -113,15 +113,15 @@
                     <div class="top">
                       <div style="min-width:0;">
                         <h3 class="title">대량 이미지 풀 확보</h3>
-                        <div class="nsub">“모을 수 있어야, 시작됩니다”</div>
+                        <div class="nsub">"모을 수 있어야, 시작됩니다"</div>
                       </div>
                     </div>
                   </div>
 
-                  <div class="arrow" aria-hidden="true">
+                  <div class="arrow arrow-p1" aria-hidden="true">
                     <svg viewBox="0 0 60 24" fill="none">
-                      <path d="M2 12h46" stroke="rgba(255,107,0,.4)" stroke-width="2.2" stroke-linecap="round"/>
-                      <path d="M42 5l8 7-8 7" stroke="rgba(255,107,0,.4)" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"/>
+                      <path d="M2 12h46" stroke="rgba(255,107,0,.6)" stroke-width="2.5" stroke-linecap="round"/>
+                      <path d="M42 5l8 7-8 7" stroke="rgba(255,107,0,.6)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                   </div>
 
@@ -129,15 +129,15 @@
                     <div class="top">
                       <div style="min-width:0;">
                         <h3 class="title">실내 이미지 자동 필터링</h3>
-                        <div class="nsub">“쓸 수 있는 사진만 남깁니다”</div>
+                        <div class="nsub">"쓸 수 있는 사진만 남깁니다"</div>
                       </div>
                     </div>
                   </div>
 
-                  <div class="arrow" aria-hidden="true">
+                  <div class="arrow arrow-p1" aria-hidden="true">
                     <svg viewBox="0 0 60 24" fill="none">
-                      <path d="M2 12h46" stroke="rgba(255,107,0,.4)" stroke-width="2.2" stroke-linecap="round"/>
-                      <path d="M42 5l8 7-8 7" stroke="rgba(255,107,0,.4)" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"/>
+                      <path d="M2 12h46" stroke="rgba(255,107,0,.6)" stroke-width="2.5" stroke-linecap="round"/>
+                      <path d="M42 5l8 7-8 7" stroke="rgba(255,107,0,.6)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                   </div>
 
@@ -145,15 +145,15 @@
                     <div class="top">
                       <div style="min-width:0;">
                         <h3 class="title">라벨링(학습용 기준 만들기)</h3>
-                        <div class="nsub">“사진에 의미를 붙입니다”</div>
+                        <div class="nsub">"사진에 의미를 붙입니다"</div>
                       </div>
                     </div>
                   </div>
 
-                  <div class="arrow" aria-hidden="true">
+                  <div class="arrow arrow-p1" aria-hidden="true">
                     <svg viewBox="0 0 60 24" fill="none">
-                      <path d="M2 12h46" stroke="rgba(255,107,0,.5)" stroke-width="2.3" stroke-linecap="round"/>
-                      <path d="M42 5l8 7-8 7" stroke="rgba(255,107,0,.5)" stroke-width="2.3" stroke-linecap="round" stroke-linejoin="round"/>
+                      <path d="M2 12h46" stroke="rgba(255,107,0,.6)" stroke-width="2.5" stroke-linecap="round"/>
+                      <path d="M42 5l8 7-8 7" stroke="rgba(255,107,0,.6)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                   </div>
 
@@ -173,15 +173,15 @@
                     <div class="top">
                       <div style="min-width:0;">
                         <h3 class="title">대량 이미지 확보</h3>
-                        <div class="nsub">“하루치가 아니라, 대량을 전제로”</div>
+                        <div class="nsub">"하루치가 아니라, 대량을 전제로"</div>
                       </div>
                     </div>
                   </div>
 
-                  <div class="arrow" aria-hidden="true">
+                  <div class="arrow arrow-p2" aria-hidden="true">
                     <svg viewBox="0 0 60 24" fill="none">
-                      <path d="M2 12h46" stroke="rgba(255,107,0,.5)" stroke-width="2.3" stroke-linecap="round"/>
-                      <path d="M42 5l8 7-8 7" stroke="rgba(255,107,0,.5)" stroke-width="2.3" stroke-linecap="round" stroke-linejoin="round"/>
+                      <path d="M2 12h46" stroke="rgba(74,144,255,.6)" stroke-width="2.5" stroke-linecap="round"/>
+                      <path d="M42 5l8 7-8 7" stroke="rgba(74,144,255,.6)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                   </div>
 
@@ -189,15 +189,15 @@
                     <div class="top">
                       <div style="min-width:0;">
                         <h3 class="title">모델 자동 분석</h3>
-                        <div class="nsub">“사람이 다 볼 필요 없습니다”</div>
+                        <div class="nsub">"사람이 다 볼 필요 없습니다"</div>
                       </div>
                     </div>
                   </div>
 
-                  <div class="arrow" aria-hidden="true">
+                  <div class="arrow arrow-p2" aria-hidden="true">
                     <svg viewBox="0 0 60 24" fill="none">
-                      <path d="M2 12h46" stroke="rgba(255,107,0,.5)" stroke-width="2.3" stroke-linecap="round"/>
-                      <path d="M42 5l8 7-8 7" stroke="rgba(255,107,0,.5)" stroke-width="2.3" stroke-linecap="round" stroke-linejoin="round"/>
+                      <path d="M2 12h46" stroke="rgba(74,144,255,.6)" stroke-width="2.5" stroke-linecap="round"/>
+                      <path d="M42 5l8 7-8 7" stroke="rgba(74,144,255,.6)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                   </div>
 
