현재 선택된 노드 제목 노출

--- a/index.html
+++ b/index.html
@@ -231,11 +231,16 @@
 
         <div class="panelBody">
           <div class="rightStack" style="min-height:0;">
+            <div class="currentNode">
+              <span class="label">현재 단계</span>
+              <h3 id="currentNodeTitle">대중 수집 캠페인 서비스</h3>
+            </div>
+
             <div class="cta">
-              <p class="big" id="appealTitle">당신의 사진 한 장이,<br/>누군가의 “외출 가능성”을 바꿉니다</p>
+              <p class="big" id="appealTitle">당신의 사진 한 장이,<br/>누군가의 "외출 가능성"을 바꿉니다</p>
               <p class="small" id="appealSub">
-                실내 사진은 이동약자에게 ‘갈 수 있는지’를 판단할 힌트가 됩니다.
-                우리는 그 힌트를 “정보”로 바꾸는 파이프라인을 만들었습니다.
+                실내 사진은 이동약자에게 '갈 수 있는지'를 판단할 힌트가 됩니다.
+                우리는 그 힌트를 "정보"로 바꾸는 파이프라인을 만들었습니다.
               </p>
             </div>
 
