파이프라인 설명 변경

--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
               <div class="laneHeader top">
                 <div class="left">
                   <span class="label">PIPELINE 1</span>
-                  <span class="desc">이미지 수집 → 자동 필터링 → 라벨링 → 전문가 모델 구축</span>
+                  <span class="desc">다양한 소스로부터 이미지를 수집하고 정제하여 AI 모델 구축까지</span>
                 </div>
-                <div class="small">“전문가를 만드는 과정”</div>
+                <div class="small">“AI 모델을 만드는 과정”</div>
               </div>
 
               <div class="laneHeader bottom">
                 <div class="left">
                   <span class="label">PIPELINE 2</span>
-                  <span class="desc">대량 이미지 확보 → 모델 자동 분석 → 식당 단위 사람 검수</span>
+                  <span class="desc">대량의 이미지를 AI 모델이 자동으로 분석하고 사람의 검수 프로세스 개선까지</span>
                 </div>
-                <div class="small">“전문가가 일하는 과정”</div>
+                <div class="small">“AI 모델이 일하는 과정”</div>
               </div>
 
               <div class="splitLine" aria-hidden="true"></div>
