타이틀 수정

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <div style="min-width:0;">
           <h1>동접랩 성과 공유</h1>
           <div class="headline">
-            실내 사진 한 장이,<br/>
-            <b>“갈 수 있는지”</b>를 알려줍니다
+            실내 사진에서 접근성 정보를 뽑아,<br/>
+            <b>동등한 이동을 가능하게</b>
           </div>
           <p class="subText">
-            동접랩은 사진을 모으고, 골라내고, 학습시키고, 대량 자동 분석과 식당 단위 검수까지 연결했습니다.
+            동접랩은 '동등한 접근성'을 위해 실내 이미지로부터 실내 접근성 정보를 추출하는 기술 생태계를 구축합니다.
           </p>
         </div>
       </div>
