프로그래스바 추가

--- a/index.html
+++ b/index.html
@@ -232,6 +232,9 @@
             <div class="currentNode">
               <span class="label">현재 단계</span>
               <h3 id="currentNodeTitle">대중 수집 캠페인 서비스</h3>
+              <div class="progressBar" id="progressBar">
+                <div class="progressFill" id="progressFill"></div>
+              </div>
             </div>
 
             <div class="cta">
