--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                     <div class="miniNode active" tabindex="0" data-id="collect_campaign">
                       <div class="row">
                         <div style="min-width:0;">
-                          <h4>대중 수집 캠페인 서비스</h4>
-                          <p>“사진을 받는 구조”부터 만들었습니다</p>
+                          <h4>시민 참여 수집 캠페인</h4>
+                          <p>고품질의 실내 이미지 데이터 확보</p>
                         </div>
                       </div>
                     </div>
@@ -90,7 +90,7 @@
                       <div class="row">
                         <div style="min-width:0;">
                           <h4>웹 크롤링 수집</h4>
-                          <p>윤리 규칙을 지키며 자동으로 모읍니다</p>
+                          <p>윤리적 크롤링 규칙을 지키며 대규모 수집</p>
                         </div>
                       </div>
                     </div>
@@ -101,7 +101,7 @@
                   <div class="mergeNode" tabindex="0" data-id="image_pool">
                     <div class="top">
                       <div style="min-width:0;">
-                        <h3 class="title">대량 이미지 풀 확보</h3>
+                        <h3 class="title">실내 이미지 확보</h3>
                         <div class="nsub">"모을 수 있어야, 시작됩니다"</div>
                       </div>
                     </div>
@@ -118,7 +118,7 @@
                     <div class="top">
                       <div style="min-width:0;">
                         <h3 class="title">실내 이미지 자동 필터링</h3>
-                        <div class="nsub">"쓸 수 있는 사진만 남깁니다"</div>
+                        <div class="nsub">Vision API 활용하여 학습 데이터 품질 향상</div>
                       </div>
                     </div>
                   </div>
@@ -133,8 +133,8 @@
                   <div class="node" tabindex="0" data-id="labeling">
                     <div class="top">
                       <div style="min-width:0;">
-                        <h3 class="title">라벨링(학습용 기준 만들기)</h3>
-                        <div class="nsub">"사진에 의미를 붙입니다"</div>
+                        <h3 class="title">레이블링</h3>
+                        <div class="nsub">대규모 학습 데이터셋 구축</div>
                       </div>
                     </div>
                   </div>
@@ -149,8 +149,8 @@
                   <div class="node" tabindex="0" data-id="expert_models">
                     <div class="top">
                       <div style="min-width:0;">
-                        <h3 class="title">전문가 모델 구축</h3>
-                        <div class="nsub">“사진을 보는 전문가를 키웁니다”</div>
+                        <h3 class="title">AI 모델 구축</h3>
+                        <div class="nsub">실내 접근성 정보 추론 모델 개발</div>
                       </div>
                     </div>
                   </div>
@@ -161,8 +161,8 @@
                   <div class="node" tabindex="0" data-id="mass_images">
                     <div class="top">
                       <div style="min-width:0;">
-                        <h3 class="title">대량 이미지 확보</h3>
-                        <div class="nsub">"하루치가 아니라, 대량을 전제로"</div>
+                        <h3 class="title">다수의 실내 이미지 입력</h3>
+                        <div class="nsub">대규모 Bulk 이미지 분석 지원</div>
                       </div>
                     </div>
                   </div>
@@ -177,8 +177,8 @@
                   <div class="node" tabindex="0" data-id="auto_analyze">
                     <div class="top">
                       <div style="min-width:0;">
-                        <h3 class="title">모델 자동 분석</h3>
-                        <div class="nsub">"사람이 다 볼 필요 없습니다"</div>
+                        <h3 class="title">AI 모델 자동 분석</h3>
+                        <div class="nsub">실내 이미지의 접근성 정보를 AI 모델이 자동으로 분석</div>
                       </div>
                     </div>
                   </div>
@@ -193,8 +193,8 @@
                   <div class="node" tabindex="0" data-id="restaurant_qc">
                     <div class="top">
                       <div style="min-width:0;">
-                        <h3 class="title">식당 단위 사람 검수</h3>
-                        <div class="nsub">“한 장씩 말고, 가게 단위로”</div>
+                        <h3 class="title">매장별 실내 접근성 검수</h3>
+                        <div class="nsub">실내 이미지들을 매장 단위로 묶어서 최종 접근성 정보 확정</div>
                       </div>
                     </div>
                   </div>
