노드 폭 수정

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                       <div class="row">
                         <div style="min-width:0;">
                           <h4>시민 참여 수집 캠페인</h4>
-                          <p>고품질의 실내 이미지 데이터 확보</p>
+                          <p>고품질의 실내 이미지 데이터 수집</p>
                         </div>
                       </div>
                     </div>
@@ -90,7 +90,7 @@
                       <div class="row">
                         <div style="min-width:0;">
                           <h4>웹 크롤링 수집</h4>
-                          <p>윤리적 크롤링 규칙을 지키며 대규모 수집</p>
+                          <p>대규모 데이터 수집</p>
                         </div>
                       </div>
                     </div>
